--- a/src/gui/SaleForm.fxml
+++ b/src/gui/SaleForm.fxml
@@ -14,61 +14,47 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="510.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
+<AnchorPane prefHeight="550.0" prefWidth="1297.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleFormController">
    <children>
-      <HBox fillHeight="false" layoutX="580.0" layoutY="463.0" prefWidth="120.0" spacing="5.0">
+      <HBox fillHeight="false" layoutX="521.0" layoutY="506.0" prefWidth="120.0" spacing="5.0">
          <children>
-            <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
+            <Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Concluir" />
             <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
          </children>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </HBox>
-      <GridPane layoutX="6.0" layoutY="55.0" prefHeight="141.0" prefWidth="558.0">
+      <GridPane layoutX="20.0" layoutY="322.0" prefHeight="141.0" prefWidth="558.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="128.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="435.0" minWidth="10.0" prefWidth="430.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="ID" />
             <Label text="Nome do cliente" GridPane.rowIndex="1" />
-            <TextField fx:id="txtId" editable="false" prefHeight="25.0" prefWidth="376.0" promptText="Preenchido automaticamente" GridPane.columnIndex="1">
-               <GridPane.margin>
-                  <Insets right="-5.0" />
-               </GridPane.margin></TextField>
+            <TextField fx:id="txtId" editable="false" promptText="Preenchido automaticamente" GridPane.columnIndex="1" />
             <TextField fx:id="txtClientName" promptText="Nome completo" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
+            <TextField fx:id="txtCustomerPhone" promptText="Apenas numeros" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets right="-5.0" />
+               </GridPane.margin>
+            </TextField>
             <TextField fx:id="txtDeliveryAddress" prefHeight="25.0" prefWidth="183.0" promptText="Rua,numero e bairro" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="-5.0" />
                </GridPane.margin></TextField>
             <Label text="Endereço de entrega" GridPane.rowIndex="3" />
-            <TextField fx:id="txtSearchProduct" prefHeight="25.0" prefWidth="188.0" promptText="Digite nome, maraca, cor, ou referencia para procurar um produto especifico" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <GridPane.margin>
-                  <Insets right="-5.0" />
-               </GridPane.margin>
-               <font>
-                  <Font name="System Italic" size="12.0" />
-               </font></TextField>
             <Label text="Telefone do cliente" GridPane.rowIndex="2" />
-            <TextField fx:id="txtCustomerPhone" promptText="Apenas numeros" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets right="-5.0" />
-               </GridPane.margin></TextField>
-            <Label text="Procuras produto" GridPane.rowIndex="4" />
+            <Label text="Id" />
          </children>
       </GridPane>
       <Label layoutX="26.0" layoutY="6.0" prefHeight="17.0" prefWidth="146.0" text="Nova venda">
@@ -76,44 +62,91 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="447.0" layoutY="6.0" prefHeight="27.0" prefWidth="60.0" text="Valor :">
+      <Label layoutX="912.0" layoutY="6.0" prefHeight="27.0" prefWidth="190.0" text="Valor  total da venda:">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <ComboBox fx:id="comboBoxTypeOfSale" layoutX="257.0" layoutY="7.0" prefWidth="150.0" />
-      <TableView fx:id="tableViewProducts" layoutX="6.0" layoutY="238.0" prefHeight="200.0" prefWidth="1271.0">
+      <ComboBox fx:id="comboBoxTypeOfSale" layoutX="380.0" layoutY="7.0" prefWidth="150.0" />
+      <Label fx:id="labelSaleTotal" layoutX="1132.0" layoutY="2.0" prefHeight="35.0" prefWidth="93.0">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnSearchProduct" disable="true" layoutX="920.0" layoutY="48.0" mnemonicParsing="false" onAction="#SearchProducts" prefHeight="27.0" prefWidth="61.0" text="Procurar" />
+      <Button fx:id="btnShowAll" disable="true" layoutX="11.0" layoutY="49.0" mnemonicParsing="false" onAction="#ShowAll" text="Mostrar todos os produtos no estoque" />
+      <Button fx:id="btnTypeOfSale" layoutX="530.0" layoutY="7.0" mnemonicParsing="false" onAction="#TypeOfSale" text="Ok" />
+      <Label layoutX="1102.0" layoutY="2.0" text="R$">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="481.0" text="* Campo obrigatorio" textFill="#e10a0a">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label layoutX="592.0" layoutY="338.0" text="*" textFill="#ee0d0d">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="592.0" layoutY="430.0" text="*" textFill="#ee0d0d">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <TableView fx:id="tableViewItenSale" layoutX="675.0" layoutY="322.0" prefHeight="216.0" prefWidth="586.0">
+        <columns>
+          <TableColumn fx:id="tableColumPrice" prefWidth="88.0" text="Preço do Item" />
+            <TableColumn fx:id="tableColumQuantityItenSale" prefWidth="78.0" text="Quantidade" />
+            <TableColumn fx:id="tableColumProduct" prefWidth="276.0" text="Descrição do iten" />
+            <TableColumn fx:id="tableColumSubTotal" prefWidth="66.0" text="Subtotal" />
+            <TableColumn fx:id="tableColumnREMOVEPRODUCT" prefWidth="73.0" />
+        </columns>
+      </TableView>
+      <TableView fx:id="tableViewProducts" layoutX="11.0" layoutY="81.0" prefHeight="201.0" prefWidth="1284.0">
          <columns>
             <TableColumn fx:id="tableColumId" prefWidth="40.0" text="Id" />
             <TableColumn fx:id="tableColumCategory" prefWidth="130.0" text="Categoria" />
             <TableColumn fx:id="tableColumName" prefWidth="100.0" text="Nome" />
             <TableColumn fx:id="tableColumColor" prefWidth="100.0" text="Cor" />
-            <TableColumn fx:id="tableColumQiantity" prefWidth="75.0" text="Quantidade" />
+            <TableColumn fx:id="tableColumQuantity" prefWidth="75.0" text="Quantidade" />
             <TableColumn fx:id="tableColumBrand" prefWidth="100.0" text="Marca" />
-            <TableColumn fx:id="tableColumReference" prefWidth="75.0" text="Codigo" />
+            <TableColumn fx:id="tableColumReference" prefWidth="75.0" text="Referencia" />
             <TableColumn fx:id="tableColumSpotCostPrice" prefWidth="137.0" text="Preço de custo(á vista)" />
             <TableColumn fx:id="tableColumForwardCostPrice" prefWidth="138.0" text="Preço de custo(á prazo)" />
             <TableColumn fx:id="tableColumCashSalePrice" prefWidth="140.0" text="Preço de venda(á vista)" />
-            <TableColumn fx:id="tableColumForwardSellingPrice" minWidth="7.0" prefWidth="146.0" text="Preço de venda(á prazo)" />
-            <TableColumn fx:id="tableColumnSELL" minWidth="0.0" prefWidth="87.0" />
+            <TableColumn fx:id="tableColumForwardSellingPrice" minWidth="7.0" prefWidth="145.0" text="Preço de venda(á prazo)" />
+            <TableColumn fx:id="tableColumnSELL" minWidth="0.0" prefWidth="99.0" />
          </columns>
       </TableView>
-      <Label fx:id="labelProduct" layoutX="580.0" layoutY="55.0" prefHeight="40.0" prefWidth="672.0">
+      <Label layoutX="378.0" layoutY="51.0" text="Procurar produto">
          <font>
-            <Font name="System Bold Italic" size="24.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="labelSaleTotal" layoutX="537.0" layoutY="2.0" prefHeight="35.0" prefWidth="93.0">
+      <TextField fx:id="txtSearchProduct" layoutX="501.0" layoutY="49.0" prefHeight="25.0" prefWidth="411.0" promptText="Digite nome, maraca, cor, ou referencia para procurar um produto especifico">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </TextField>
+      <Label layoutX="675.0" layoutY="302.0" prefHeight="17.0" prefWidth="120.0" text="Itens desta venda" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="btnSearchProduct" layoutX="583.0" layoutY="169.0" mnemonicParsing="false" onAction="#SearchProducts" prefHeight="27.0" prefWidth="61.0" text="Procurar" />
-      <Button fx:id="btnShowAll" layoutX="6.0" layoutY="206.0" mnemonicParsing="false" onAction="#ShowAll" text="Mostrar todos os produtos" />
-      <Button fx:id="UpdateLabelTotalSale" layoutX="407.0" layoutY="7.0" mnemonicParsing="false" onAction="#UpdateLabelTotalSale" text="Ok" />
-      <Label layoutX="507.0" layoutY="2.0" text="R$">
+      <Label layoutX="24.0" layoutY="302.0" text="Informações do cliente">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="286.0" layoutY="10.0" text="Tipo de venda">
+         <font>
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
    </children>
