--- a/src/gui/SaleList.fxml
+++ b/src/gui/SaleList.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -8,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="371.0" prefWidth="1175.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleListController">
+<VBox prefHeight="620.0" prefWidth="1180.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SaleListController">
    <children>
       <Label prefHeight="44.0" prefWidth="189.0" text="Registro de vendas">
          <font>
@@ -20,17 +21,35 @@
           <Button fx:id="BtNewSale" mnemonicParsing="false" onAction="#onBtNewSale" text="Nova Venda" />
         </items>
       </ToolBar>
-      <TableView fx:id="tableViewSale" prefHeight="277.0" prefWidth="962.0">
+      <TableView fx:id="tableViewSale" prefHeight="212.0" prefWidth="1175.0">
         <columns>
           <TableColumn fx:id="tableColumId" prefWidth="30.0" text="Id" />
             <TableColumn fx:id="tableColumSaleDate" prefWidth="77.0" text="Data" />
-          <TableColumn fx:id="tableColumClientName" prefWidth="223.0" text="Nome do cliente" />
-            <TableColumn fx:id="tableColumCustomerPhone" prefWidth="116.0" text="Telefone do cliente" />
-            <TableColumn fx:id="tableColumDeliveryAddres" prefWidth="241.0" text="Endereço de entrega" />
+          <TableColumn fx:id="tableColumClientName" prefWidth="258.0" text="Nome do cliente" />
+            <TableColumn fx:id="tableColumCustomerPhone" prefWidth="129.0" text="Telefone do cliente" />
+            <TableColumn fx:id="tableColumDeliveryAddres" prefWidth="236.0" text="Endereço de entrega" />
+            <TableColumn fx:id="tableColumTypeOfSale" prefWidth="96.0" text="Tipo de venda" />
             <TableColumn fx:id="tableColumSalePrice" prefWidth="98.0" text="Valor da venda" />
-            <TableColumn fx:id="tableColumnProductSale" prefWidth="287.0" text="Produto vendido" />
-            <TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" prefWidth="91.0" />
+            <TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" prefWidth="71.0" />
+            <TableColumn fx:id="tableColumnLISTITENS" prefWidth="81.0" />
         </columns>
+      </TableView>
+      <Label text="Itens dessa venda">
+         <padding>
+            <Insets top="11.0" />
+         </padding>
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Label>
+      <TableView fx:id="tableViewItenSale" editable="true" prefHeight="271.0" prefWidth="1175.0">
+         <columns>
+            <TableColumn fx:id="tableColumIdItenSale" prefWidth="75.0" text="Id" />
+            <TableColumn fx:id="tableColumPrice" prefWidth="101.0" text="Preço unitario" />
+            <TableColumn fx:id="tableColumQuantity" text="Quantidade" />
+            <TableColumn fx:id="tableColumProduct" prefWidth="290.0" text="Descrição" />
+            <TableColumn fx:id="tableColumSubtotal" prefWidth="83.0" text="Subtotal" />
+         </columns>
       </TableView>
    </children>
 </VBox>
